--- a/RobotMakerExpress2000/settings.gradle
+++ b/RobotMakerExpress2000/settings.gradle
@@ -15,5 +15,20 @@ include 'api'
 include 'services:webservice'
 */
 
+// Can be removed once Quarkus is published on Gradle Plugin Portal
+pluginManagement {
+    repositories {
+        mavenCentral()
+        gradlePluginPortal()
+    }
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == 'io.quarkus') {
+                useModule("io.quarkus:quarkus-gradle-plugin:${requested.version}")
+            }
+        }
+    }
+}
+
 rootProject.name = 'RobotMakerExpress2000'
 includeFlat 'RobotCommons'
