--- a/RobotShop/build.gradle
+++ b/RobotShop/build.gradle
@@ -1,39 +1,23 @@
 plugins {
-    id 'application'
-    id 'org.gradle.java.experimental-jigsaw' version '0.1.1'
-    id 'com.google.cloud.tools.jib' version '1.0.1'
+    id 'java'
+    id 'io.quarkus' version '0.15.0'
 }
 
 repositories {
+    mavenLocal()
+    mavenCentral()
+    flatDir {
+        def libDir = new File(project(':RobotCommons').buildDir, project('RobotCommons').libsDirName)
+        dirs libDir
+    }
 }
 
 dependencies {
-    compile project('RobotCommons')
+    // Quarkus can only find our dependencies in jar form. Compiling RobotCommons normally results in the class directory on the classpath, not the jar
+    compile 'com.example.big.troublesome.corp:RobotCommons:0.0.1@jar'
+    implementation enforcedPlatform('io.quarkus:quarkus-bom:0.15.0')
+    implementation 'io.quarkus:quarkus-resteasy'
+    implementation 'io.quarkus:quarkus-smallrye-rest-client'
 }
 
-javaModule.name = 'RobotShop'
-mainClassName = 'com.example.big.troublesome.corp.robot.shop.RobotShop'
-
-jib {
-    from {
-        image = 'gcr.io/distroless/java:11'
-    }
-    to {
-        image = 'andrewazores/robotshop'
-    }
-    container {
-        useCurrentTimestamp = true
-        ports = ['9091', '12500', '12501']
-        jvmFlags = [
-            '-Dcom.sun.management.jmxremote.rmi.port=9091',
-            '-Dcom.sun.management.jmxremote=true',
-            '-Dcom.sun.management.jmxremote.port=9091',
-            '-Dcom.sun.management.jmxremote.ssl=false',
-            '-Dcom.sun.management.jmxremote.authenticate=false',
-            '-Dcom.sun.management.jmxremote.local.only=false',
-            '-Djava.rmi.server.hostname=robotshop'
-        ]
-    }
-}
-
-tasks.build.dependsOn tasks.jib
+tasks.compileJava.dependsOn(':RobotCommons:jar')
