--- a/RobotMakerExpress2000/build.gradle
+++ b/RobotMakerExpress2000/build.gradle
@@ -1,9 +1,22 @@
-plugins {
-    id 'java'
-    id 'io.quarkus' version '0.15.0'
+// this block is necessary to make enforcedPlatform work for Quarkus plugin available
+// only locally (snapshot) that is also importing the Quarkus BOM
+buildscript {
+    repositories {
+        mavenLocal()
+    }
+    dependencies {
+        classpath "io.quarkus:quarkus-gradle-plugin:${quarkusVersion}"
+    }
 }
 
+plugins {
+    id 'java'
+}
+
+apply plugin: 'io.quarkus'
+
 repositories {
+    mavenLocal()
     mavenCentral()
     flatDir {
         def libDir = new File(project(':RobotCommons').buildDir, project('RobotCommons').libsDirName)
@@ -13,8 +26,8 @@ repositories {
 
 dependencies {
     // Quarkus can only find our dependencies in jar form. Compiling RobotCommons normally results in the class directory on the classpath, not the jar
-    compile 'com.example.big.troublesome.corp:RobotCommons:0.0.1@jar'
-    implementation enforcedPlatform('io.quarkus:quarkus-bom:0.15.0')
+    implementation 'com.example.big.troublesome.corp:RobotCommons:0.0.1@jar'
+    implementation enforcedPlatform("io.quarkus:quarkus-bom:${quarkusVersion}")
     implementation 'io.quarkus:quarkus-resteasy'
 }
 
