--- a/RobotShop/src/main/resources/application.properties
+++ b/RobotShop/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 # Your configuration properties
-com.example.big.troublesome.corp.robot.shop.RobotMakerService/mp-rest/url=http://localhost:8080
+com.example.big.troublesome.corp.robot.shop.RobotMakerStorageService/mp-rest/url=${robotMakerURL}
