--- a/RobotMakerExpress2000/build.gradle
+++ b/RobotMakerExpress2000/build.gradle
@@ -19,7 +19,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     flatDir {
-        def libDir = new File(project(':RobotCommons').buildDir, project('RobotCommons').libsDirName)
+        def libDir = new File(project(':RobotCommons').buildDir, project(':RobotCommons').libsDirName)
         dirs libDir
     }
 }
