--- a/minishift/persistent-volume-claim.yaml
+++ b/minishift/persistent-volume-claim.yaml
@@ -4,8 +4,8 @@ metadata:
   name: "container-jfr"
 spec:
   accessModes:
-    - "ReadWriteMany"
+    - "ReadWriteOnce"
   resources:
     requests:
-      storage: "100Mi"
+      storage: "1Gi"
 
